# voice-typer

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROTOCOL.md  README.md  build.sh  build_lite.sh  config.py  config.yaml  controller.py  hotwords.txt  indicator.py  main.py  recognizer.py  recorder.py  requirements.txt  setup.py  text_inserter.py  voicetyper.spec
client/: CODE_REVIEW_FIXES.md  Makefile  asr_client.py  build.sh  config.py  config.yaml  controller.py  create_icon.py  indicator.py  main.py  requirements.txt  test_text_inserter.py  text_inserter.py  voicetyper.spec
client_go/: BUILD_WINDOWS.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  PROJECT_SUMMARY.md  README.md  REVIEW_REPORT.md  build.bat  build.ps1  go.mod  go.sum  main.go
client_go_2/: DESIGN.md
client_linux/: 99-voicetyper-input.rules  Makefile  README.md  asr_client.py  config.py  controller.py  hotkey_listener.py  indicator.py  main.py  recorder.py  requirements.txt  systray_ui.py  text_inserter.py
client_macos/: Makefile  README.md  asr_client.py  build.sh  config.py  config.yaml  controller.py  main.py  (+4 more)
server/: CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASING.md  asr_server.py  auth.py  llm_client.py  pyproject.toml  recognizer.py  requirements-release.txt  requirements.txt  run.bat  run.sh  setup.sh  voice_server.py
server/scripts/: spike_streaming.py  voice_typer_server.bat  voice_typer_server.sh
server/voice_typer_server/: __init__.py  app.py  auth.py  cli.py  llm_client.py  recognizer.py  win_service.py
server/voice_typer_server/prompts/: correction.md
(+116 files in other folders)
